修改ue_admin的样式

--- a/packages/ue_admin/.env
+++ b/packages/ue_admin/.env
@@ -2,19 +2,13 @@
 VITE_BASE_URL=/admin
 
 # auth base api 现在url中只需一个auth
-VITE_BACK_AUTH_BASE = 
-VITE_BACK_AUTH_PORT = 
+VITE_AUTH_API_BASE = 'http://localhost:3001'
+VITE_AUTH_API_PORT = 
 
 # app base api
 VITE_BACK_API_BASE = '/api'
 VITE_BACK_API_PORT = 3000
-
 VITE_BACK_API_FS = '/fs'
-
-# 登录信息
-#VITE_LOGIN_KEY_USERNAME = ''
-#VITE_LOGIN_KEY_PASSWORD = ''
-#VITE_LOGIN_KEY_PIN = ''
 
 # 配置token存储机制
 VITE_STORETOKEN_WAY='session'
@@ -27,6 +21,7 @@ VITE_FRONT_DOCEDITOR_MODIFY=''
 VITE_TMW_REQUIRE_BUCKET=no
 
 # 是否对传递的用户密码进行加密传输
+VITE_LOGIN_CODE_APPID=tms-mongodb-web
 VITE_ENCRYPT_SECRET=no
 
 # 选取文件时，指定外部系统的地址
