优化文档编辑器中对json类型属性的编辑

--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -17,7 +17,7 @@
     "pinia": "^2.0.13",
     "tms-koa-account": "^0.0.10",
     "tms-vue3": "0.0.4",
-    "tms-vue3-ui": "^0.0.43",
+    "tms-vue3-ui": "0.0.44",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
