--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tmw-back",
+  "name": "tms-mongodb-back",
   "version": "0.0.1",
+  "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start": "node ./dist/server"
@@ -20,7 +20,7 @@
     "redis": "^4.2.0",
     "tms-koa": "0.0.88",
     "tms-koa-account": "^0.0.10",
-    "tmw-model": "workspace:*"
+    "tmw-kit": "workspace:*"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
