--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ue_admin2",
+  "name": "ue_admin",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build.eslint": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
