--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tmw-kit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "tms-monogodb-web开发工具包",
   "main": "./dist/index.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist/"
+  ],
   "keywords": [],
   "author": "jasony62",
   "license": "MIT",
@@ -21,6 +24,6 @@
   "devDependencies": {
     "@types/node": "^18.0.1",
     "rimraf": "^3.0.2",
-    "tms-koa": "0.0.88"
+    "tms-koa": "0.0.89"
   }
 }
