--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -18,12 +18,12 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "glob": "^8.0.3",
-    "mongo-escape": "^2.0.6",
-    "mongodb": "^4.8.1"
+    "mongo-escape": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
+    "mongodb": "^4.8.1",
     "rimraf": "^3.0.2",
-    "tms-koa": "0.0.94"
+    "tms-koa": "0.0.95"
   }
 }
