--- a/back/package.json
+++ b/back/package.json
@@ -14,15 +14,15 @@
     "archiver": "^5.3.1",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.4",
     "glob": "^8.0.1",
     "lodash": "^4.17.20",
     "log4js": "^6.1.0",
-    "moment": "^2.29.2",
     "mongo-escape": "^2.0.6",
     "mongodb": "^3.7.3",
     "nanoid": "^3.1.4",
     "redis": "^3.1.2",
-    "tms-koa": "^0.0.86",
+    "tms-koa": "0.0.86",
     "tms-koa-account": "^0.0.9"
   }
 }
