--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -3,35 +3,35 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^1.1.4",
+    "@element-plus/icons-vue": "^2.0.6",
     "add": "^2.0.6",
     "element-plus": "^2.2.8",
     "jsoneditor": "^9.7.4",
     "mongodb": "^4.7.0",
     "pinia": "^2.0.13",
     "tms-koa-account": "^0.0.10",
-    "tms-vue3": "0.0.4",
-    "tms-vue3-ui": "0.0.44",
+    "tms-vue3": "^0.0.4",
+    "tms-vue3-ui": "^0.0.47",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/jsoneditor": "^9.5.1",
-    "@types/node": "^17.0.25",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@types/node": "^18.6.5",
+    "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "sass": "^1.50.1",
     "stylelint": "^14.8.0",
-    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
-    "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "vite": "^3.0.4",
+    "vue-tsc": "^0.39.5"
   }
 }
