--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,8 +5,10 @@ FROM node:16.15-alpine3.15 AS builder
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
 
 # 安装基础包
-RUN npm install -g pnpm typescript
+RUN npm install --location=global pnpm typescript
 
+# 安装sharp包需要的工具
+RUN apk add python3 make
 # 解决sharp依赖的libvips包下载慢的问题
 COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
 
@@ -75,11 +77,5 @@ RUN chmod +x /usr/local/bin/start_all.sh
 
 # 配置文件
 COPY ../docker/back/config /usr/app/tmw/config
-
-# 为了后续安装扩展插件做准备。
-## 基础工具
-RUN npm install -g pnpm typescript
-## 解决sharp依赖的libvips包下载慢的问题
-COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
 
 ENTRYPOINT ["start_all.sh"]
