--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -18,6 +18,7 @@
     "tms-vue3": "^0.0.5",
     "tms-vue3-ui": "^0.0.49",
     "vue": "^3.2.25",
+    "vue-clipboard3": "^2.0.0",
     "vue-router": "4"
   },
   "devDependencies": {
