--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
     "add": "^2.0.6",
+    "debug": "^4.3.4",
     "element-plus": "^2.2.8",
     "jsoneditor": "^9.7.4",
+    "lodash": "^4.17.21",
     "mongodb": "^4.7.0",
     "pinia": "^2.0.13",
     "tms-koa-account": "^0.0.10",
@@ -22,7 +24,9 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/jsoneditor": "^9.5.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.6.5",
     "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.5",
