支持登录关闭验证码

--- a/packages/ue_admin/.env
+++ b/packages/ue_admin/.env
@@ -26,3 +26,5 @@ VITE_ENCRYPT_SECRET=no
 
 # 选取文件时，指定外部系统的地址
 VITE_EXTERNAL_FILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
+
+VITE_LOGIN_CAPTCHA_DISABLED=yes
