--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -18,7 +18,7 @@
     "@log4js-node/log4js-api": "^1.0.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "glob": "^8.0.3",
+    "glob": "7.1.6",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.8.1"
   },
