--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -20,6 +20,7 @@
     "redis": "^4.2.0",
     "tms-koa": "0.0.97",
     "tms-koa-account": "^0.0.10",
+    "tmw-data": "workspace:*",
     "tmw-kit": "workspace:*"
   },
   "devDependencies": {
