--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -20,7 +20,8 @@
     "dayjs": "^1.11.3",
     "glob": "7.1.6",
     "mongo-escape": "^2.0.6",
-    "mongodb": "^4.8.1"
+    "mongodb": "^4.8.1",
+    "tmw-data": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.6.5",
