--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@log4js-node/log4js-api": "^1.0.2",
+    "archiver": "^5.3.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "glob": "7.1.6",
