--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,15 +13,32 @@ RUN apk add python3 make
 COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
 
 # 复制源代码
+## data
+COPY ../packages/tmw-data /usr/src/tmw/data
+RUN cd /usr/src/tmw/data && pnpm i --strict-peer-dependencies=false && pnpm build 
+### 去掉不必要的依赖包
+RUN rm -rf /usr/src/tmw/data/node_modules
+RUN cd /usr/src/tmw/data && pnpm i --production --strict-peer-dependencies=false
+
 ## kit
 COPY ../packages/tmw-kit /usr/src/tmw/kit
+RUN sed -i 's/"tmw-data": "workspace:\*"/"tmw-data": "file:\.\.\/data"/g' /usr/src/tmw/kit/package.json
 RUN cd /usr/src/tmw/kit && pnpm i --strict-peer-dependencies=false && pnpm build 
 ### 去掉不必要的依赖包
 RUN rm -rf /usr/src/tmw/kit/node_modules
 RUN cd /usr/src/tmw/kit && pnpm i --production --strict-peer-dependencies=false
 
+## plugin
+COPY ../packages/plugins /usr/src/tmw/plugins
+RUN sed -i 's/"tmw-kit": "workspace:\*"/"tmw-kit": "file:\.\.\/kit"/g' /usr/src/tmw/plugins/package.json
+RUN cd /usr/src/tmw/plugins && pnpm i --strict-peer-dependencies=false && pnpm build 
+### 去掉不必要的依赖包
+RUN rm -rf /usr/src/tmw/plugins/node_modules
+RUN cd /usr/src/tmw/plugins && pnpm i --production --strict-peer-dependencies=false
+
 ## back安装依赖包
 COPY ../packages/tmw-back/package.json /usr/src/tmw/back/package.json
+RUN sed -i 's/"tmw-data": "workspace:\*"/"tmw-data": "file:\.\.\/data"/g' /usr/src/tmw/back/package.json
 RUN sed -i 's/"tmw-kit": "workspace:\*"/"tmw-kit": "file:\.\.\/kit"/g' /usr/src/tmw/back/package.json
 RUN cd /usr/src/tmw/back && pnpm i --strict-peer-dependencies=false
 ## ue_admin安装依赖包
@@ -31,13 +48,15 @@ RUN cd /usr/src/tmw/ue_admin && pnpm i --strict-peer-dependencies=false
 # 编译源代码
 ## back
 COPY ../packages/tmw-back /usr/src/tmw/back
+RUN sed -i 's/"tmw-data": "workspace:\*"/"tmw-data": "file:\.\.\/data"/g' /usr/src/tmw/back/package.json
 RUN sed -i 's/"tmw-kit": "workspace:\*"/"tmw-kit": "file:\.\.\/kit"/g' /usr/src/tmw/back/package.json
 RUN cd /usr/src/tmw/back && pnpm build 
 
 ### 去掉不必要的包，重新安装生产版本的包
-RUN rm -rf /usr/src/tmw/back/node_modules
+# RUN rm -rf /usr/src/tmw/back/node_modules
 RUN cd /usr/src/tmw/back && pnpm i --production --strict-peer-dependencies=false
-RUN cd /usr/src/tmw/back/node_modules/tmw-kit && pnpm i --production --strict-peer-dependencies=false
+# RUN cd /usr/src/tmw/back/node_modules/tmw-data && pnpm i --production --strict-peer-dependencies=false
+# RUN cd /usr/src/tmw/back/node_modules/tmw-kit && pnpm i --production --strict-peer-dependencies=false
 
 ## ue_admin
 COPY ../packages/ue_admin /usr/src/tmw/ue_admin
@@ -68,6 +87,9 @@ COPY --from=builder /usr/src/tmw/back/package.json /usr/app/tmw/package.json
 RUN sed -i 's/"tmw-kit": "file:\.\.\/kit"/"tmw-kit": "\*"/g' /usr/app/tmw/package.json
 COPY ../docker/back/start_back.sh /usr/app/tmw/start_back.sh
 RUN chmod +x /usr/app/tmw/start_back.sh
+
+# plugins
+COPY --from=builder /usr/src/tmw/plugins/dist /usr/app/tmw/plugins
 
 WORKDIR /usr/app/tmw
 
