--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -11,6 +11,7 @@
   "author": "jasony62",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^18.7.13",
     "tmw-kit": "workspace:*"
   },
   "devDependencies": {
