--- a/packages/ue_admin/.env
+++ b/packages/ue_admin/.env
@@ -1,5 +1,5 @@
 # app config
-VITE_BASE_URL=/admin
+VITE_BASE_URL=/admin/
 
 # auth base api 现在url中只需一个auth
 VITE_AUTH_API_BASE = 'http://localhost:3001'
