--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmw-kit",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "tms-monogodb-web开发工具包",
   "main": "./dist/index.js",
   "types": "/dist/index.d.ts",
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "glob": "7.1.6",
+    "lodash": "^4.17.21",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.8.1",
     "tmw-data": "workspace:*"
