--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -12,13 +12,14 @@
     "add": "^2.0.6",
     "debug": "^4.3.4",
     "element-plus": "^2.2.8",
+    "handlebars": "^4.7.7",
     "jsoneditor": "^9.7.4",
     "lodash": "^4.17.21",
     "mongodb": "^4.7.0",
     "pinia": "^2.0.13",
     "tms-koa-account": "^0.0.10",
     "tms-vue3": "^0.0.5",
-    "tms-vue3-ui": "^0.0.57",
+    "tms-vue3-ui": "^0.0.59",
     "vue": "^3.2.25",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4"
