优化数据初始化功能

--- a/back/tmw_db_init_config.json
+++ b/back/tmw_db_init_config.json
@@ -1,61 +1,22 @@
 [
   {
-    "dbName": "e2e5gmx_1",
-    "clName": "contact_1",
-    "dbTitle": "",
-    "clTitle": "",
-    "schTitle": "",
-    "dbDescription": "",
-    "clDescription": "",
-    "schDescription": "",
-    "bucket": "",
-    "schema": {
-      "userid": {
-        "type": "string",
-        "required": false,
-        "groupable": false,
-        "dependencies": {},
-        "eventDependencies": {},
-        "readonly": false,
-        "default": "",
-        "title": "用户ID"
-      },
-      "name": {
-        "type": "string",
-        "required": true,
-        "groupable": false,
-        "dependencies": {},
-        "eventDependencies": {},
-        "readonly": false,
-        "default": "",
-        "title": "姓名"
-      }
-    }
-  },
-  {
-    "dbName": "e2e5gmx_1",
-    "clName": "chatbot_2",
-    "schema": {
-      "id": {
-        "type": "string",
-        "required": false,
-        "groupable": false,
-        "dependencies": {},
-        "eventDependencies": {},
-        "readonly": false,
-        "default": "",
-        "title": "chatbot_id"
-      },
-      "name": {
-        "type": "string",
-        "required": false,
-        "groupable": false,
-        "dependencies": {},
-        "eventDependencies": {},
-        "readonly": false,
-        "default": "",
-        "title": "name"
-      }
-    }
+    "db": {
+      "name": "db_example",
+      "title": "示例数据库",
+      "description": "",
+      "bucket": ""
+    },
+    "cl": {
+      "name": "cl_example",
+      "title": "示例集合",
+      "description": "",
+      "bucket": ""
+    },
+    "docSchema": {
+      "title": "示例文档定义",
+      "description": "",
+      "properties": {}
+    },
+    "docs": []
   }
 ]
