初始化数据包含文档

--- a/back/tmw_db_init_config.json
+++ b/back/tmw_db_init_config.json
@@ -14,9 +14,14 @@
     },
     "docSchema": {
       "title": "示例文档定义",
-      "description": "",
-      "properties": {}
+      "description": "测试",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "名称"
+        }
+      }
     },
-    "docs": []
+    "docs": [{ "name": "001" }, { "name": "002" }]
   }
 ]
