--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^18.7.13",
+    "axios": "^0.27.2",
     "tmw-kit": "workspace:*"
   },
   "devDependencies": {
