--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.5",
+    "@types/node": "18.6.5",
     "rimraf": "^3.0.2"
   }
 }
