--- a/packages/tmw-data/package.json
+++ b/packages/tmw-data/package.json
@@ -29,7 +29,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/node": "18.6.5",
     "jest": "^27.5.0",
     "rimraf": "^3.0.2"
   }
