--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -26,7 +26,7 @@
     "tmw-data": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^18.6.5",
+    "@types/node": "18.6.5",
     "rimraf": "^3.0.2",
     "tms-koa": "0.1.2"
   }
