--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.13",
     "tms-koa-crypto": "^0.1.0",
+    "tms-template-viz": "^0.0.2",
     "tms-vue3": "^0.0.5",
     "tms-vue3-ui": "^0.0.66",
     "vue": "^3.2.25",
@@ -33,7 +34,7 @@
     "@types/debug": "^4.1.7",
     "@types/jsoneditor": "^9.5.1",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.5",
+    "@types/node": "18.6.5",
     "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
