提交创建账号插件

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -16,6 +16,7 @@
     "tmw-kit": "workspace:*"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tms-koa-account": "^0.1.1"
   }
 }
