--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,13 +4,16 @@
 FROM node:16.15-alpine3.15 AS builder
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
 
+# 修改npm源
+RUN npm config set registry https://registry.npmmirror.com
+
 # 安装基础包
 RUN npm install --location=global pnpm typescript
 
-# 安装sharp包需要的工具
-RUN apk add python3 make
-# 解决sharp依赖的libvips包下载慢的问题
-COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
+# # 安装sharp包需要的工具
+# RUN apk add python3 make
+# # 解决sharp依赖的libvips包下载慢的问题
+# COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
 
 # 复制源代码
 ## data
