--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -35,7 +35,7 @@
     "@types/jsoneditor": "^9.5.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.6.5",
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitejs/plugin-vue": "3.0.1",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "sass": "^1.50.1",
@@ -43,7 +43,7 @@
     "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
-    "vite": "^3.0.4",
-    "vue-tsc": "^0.39.5"
+    "vite": "3.0.4",
+    "vue-tsc": "0.39.5"
   }
 }
