--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmw-kit",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "tms-monogodb-web开发工具包",
   "main": "./dist/index.js",
   "types": "/dist/index.d.ts",
@@ -18,7 +18,9 @@
     "@log4js-node/log4js-api": "^1.0.2",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
+    "debug": "^4.3.4",
     "glob": "7.1.6",
     "lodash": "^4.17.21",
     "mongo-escape": "^2.0.6",
