提供文档对象增删改操作的webhook

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,12 @@ node_modules
 *.override.yml
 *.mongoweb.yml
 
+.env*
+dist/
+
 /tests/
 /patch/
 /volumes/
 
 .pnpm-debug.log
-
 docker/standalone/back
