--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "archiver": "^5.3.1",
+    "axios": "^0.27.2",
     "commander": "^9.4.0",
     "dayjs": "^1.11.3",
     "debug": "^4.3.4",
