支持跨集合适用数据填充

--- a/packages/tmw-kit/tsconfig.json
+++ b/packages/tmw-kit/tsconfig.json
@@ -8,7 +8,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "types": ["node", "jest"]
   },
-  "exclude": ["node_modules", "dist", "test"]
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.d.ts", "test/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
