--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tmw-kit",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "tms-monogodb-web开发工具包",
   "main": "./dist/index.js",
   "types": "/dist/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./dist && tsc -p tsconfig.build.json",
+    "test": "jest"
   },
   "files": [
     "dist/"
@@ -22,14 +22,19 @@
     "dayjs": "^1.11.3",
     "debug": "^4.3.4",
     "glob": "7.1.6",
+    "jsonpath-plus": "^7.2.0",
     "lodash": "^4.17.21",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.8.1",
     "tmw-data": "workspace:*"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/node": "18.11.9",
+    "jest": "^29.3.1",
+    "randexp": "^0.5.3",
     "rimraf": "^3.0.2",
-    "tms-koa": "0.1.2"
+    "tms-koa": "0.1.2",
+    "ts-jest": "^29.0.3"
   }
 }
