--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -20,11 +20,12 @@
     "handlebars": "^4.7.7",
     "jsoneditor": "^9.9.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.13",
     "tms-koa-crypto": "^0.1.0",
     "tms-template-viz": "^0.0.2",
     "tms-vue3": "^0.0.5",
-    "tms-vue3-ui": "^0.0.74",
+    "tms-vue3-ui": "^0.0.75",
     "vue": "^3.2.25",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4",
