--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -16,6 +16,7 @@
     "commander": "^9.4.0",
     "dayjs": "^1.11.3",
     "debug": "^4.3.4",
+    "glob": "7.1.6",
     "lodash": "^4.17.21",
     "log4js": "^6.5.2",
     "mongodb": "^4.8.1",
