--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.8.1",
+    "nanoid": "^3.3.4",
     "tmw-data": "workspace:*"
   },
   "devDependencies": {
