文件管理支持由外部变量控制

--- a/packages/ue_admin/.env
+++ b/packages/ue_admin/.env
@@ -28,3 +28,4 @@ VITE_ENCRYPT_SECRET=no
 VITE_EXTERNAL_FILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
 
 VITE_LOGIN_CAPTCHA_DISABLED=yes
+VITE_EXTERNAL_FS_URL='http://localhost:8080/web'
