全量复制定义入口支持定制是否开启

--- a/packages/ue_admin/.env
+++ b/packages/ue_admin/.env
@@ -24,8 +24,14 @@ VITE_TMW_REQUIRE_BUCKET=no
 VITE_LOGIN_CODE_APPID=tms-mongodb-web
 VITE_ENCRYPT_SECRET=no
 
-# 选取文件时，指定外部系统的地址
+# 选取文件时，指定外部系统的地址(在package/ue_admin中不涉及)
 VITE_EXTERNAL_FILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
 
+# 登录是否需要验证码
 VITE_LOGIN_CAPTCHA_DISABLED=yes
+
+# 文件管理地址
 VITE_EXTERNAL_FS_URL='http://localhost:8080/web'
+
+# 是否开启全量复制定义
+VITE_TMW_APP_REPLICA=yes
