--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@types/node": "^18.7.13",
     "axios": "^0.27.2",
+    "debug": "^4.3.4",
+    "pinyin-pro": "^3.13.0",
     "tmw-kit": "workspace:*"
   },
   "devDependencies": {
+    "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
-    "tms-koa-account": "^0.1.6",
-    "lodash": "^4.17.21"
+    "tms-koa-account": "^0.1.6"
   }
 }
