--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "element-plus": "^2.2.8",
     "jsoneditor": "^9.9.0",
+    "tms-vue3-ui": "^0.0.80",
     "vue": "^3.2.37",
     "vue-router": "4",
-    "tms-vue3-ui": "^0.0.80"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/jsoneditor": "^9.5.1",
