优选取文件代码

--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -19,13 +19,14 @@
     "gitart-vue-dialog": "^2.4.0",
     "handlebars": "^4.7.7",
     "jsoneditor": "^9.9.0",
+    "jsonpath-plus": "^7.2.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "pinia": "^2.0.13",
     "tms-koa-crypto": "^0.1.0",
-    "tms-template-viz": "^0.0.7",
+    "tms-template-viz": "^0.0.9",
     "tms-vue3": "^0.0.5",
-    "tms-vue3-ui": "^0.0.80",
+    "tms-vue3-ui": "^0.0.81",
     "vue": "^3.2.25",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4",
