【从文件导入数据】插件，增加下载excel模板功能；优化初始化脚本

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.27.2",
     "debug": "^4.3.4",
     "pinyin-pro": "^3.13.0",
-    "tmw-kit": "workspace:*"
+    "tmw-kit": "workspace:*",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "lodash": "^4.17.21",
