--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "@antv/layout": "^0.3.5",
-    "@antv/x6": "^1.34.2",
-    "@antv/x6-vue-shape": "^1.5.2",
+    "@antv/x6": "2.4.0",
     "@element-plus/icons-vue": "^2.0.6",
     "add": "^2.0.6",
     "debug": "^4.3.4",
@@ -27,7 +26,7 @@
     "tms-template-viz": "^0.0.11",
     "tms-vue3": "^0.0.5",
     "tms-vue3-ui": "^0.0.86",
-    "vue": "3.2.25",
+    "vue": "3.2.47",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4",
     "web-worker": "^1.2.0"
@@ -37,7 +36,7 @@
     "@types/jsoneditor": "^9.5.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.6.5",
-    "@vitejs/plugin-vue": "3.0.1",
+    "@vitejs/plugin-vue": "4.0.0",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "sass": "^1.50.1",
@@ -45,7 +44,7 @@
     "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "3.2.4",
-    "vue-tsc": "1.0.9 "
+    "vite": "4.1.2",
+    "vue-tsc": "1.1.3"
   }
 }
