--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/node": "^18.7.13",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "debug": "^4.3.4",
     "pinyin-pro": "^3.13.0",
     "tmw-kit": "workspace:*",
