--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --force",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && node --max_old_space_size=4096 node_modules/vite/bin/vite build",
     "preview": "vite preview"
   },
   "dependencies": {
