--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vue-tsc --noEmit && node --max_old_space_size=4096 node_modules/vite/bin/vite build",
+    "build2": "node --max_old_space_size=4096 node_modules/vite/bin/vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -28,7 +29,7 @@
     "tms-vue3-ui": "^0.0.86",
     "vue": "3.2.47",
     "vue-clipboard3": "^2.0.0",
-    "vue-router": "4",
+    "vue-router": "4.1.2",
     "web-worker": "^1.2.0"
   },
   "devDependencies": {
@@ -43,7 +44,7 @@
     "stylelint": "^14.8.0",
     "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
+    "typescript": "4.9.3",
     "vite": "4.1.2",
     "vue-tsc": "1.1.3"
   }
