--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build2": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,7 +14,7 @@
     "jsoneditor": "^9.9.0",
     "tms-vue3-ui": "^0.0.86",
     "vue": "3.2.47",
-    "vue-router": "4",
+    "vue-router": "4.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "stylelint": "^14.8.0",
     "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4",
+    "typescript": "4.6.4",
     "vite": "4.1.2",
     "vue-tsc": "1.1.3"
   }
