--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "debug": "^4.3.4",
+    "glob": "7.1.6",
     "pinyin-pro": "^3.13.0",
     "tmw-kit": "workspace:*",
     "xlsx": "^0.18.5"
@@ -22,7 +23,7 @@
   "devDependencies": {
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
-    "tms-koa": "^0.1.6",
-    "tms-koa-account": "^0.1.6"
+    "tms-koa": "^0.1.7",
+    "tms-koa-account": "^0.1.7"
   }
 }
