--- a/docker/Dockerfile-node16
+++ b/docker/Dockerfile-node16
@@ -1,22 +1,22 @@
 # 开箱即用的tms-mongodb-web镜像
 
 # 服务预编译
-FROM node:18-alpine AS builder
+FROM node:16.15-alpine3.15 AS builder
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
 
 # 修改npm源
 RUN npm config set registry https://registry.npmmirror.com
 
-# RUN npm config set sharp_binary_host https://npmmirror.com/mirrors/sharp
-# RUN npm config set sharp_libvips_binary_host https://npmmirror.com/mirrors/sharp-libvips
+RUN npm config set sharp_binary_host https://npmmirror.com/mirrors/sharp
+RUN npm config set sharp_libvips_binary_host https://npmmirror.com/mirrors/sharp-libvips
 
 # 安装基础包
-RUN npm install --location=global pnpm typescript
+RUN npm install --location=global pnpm typescript@4.6.4
 
 # 安装sharp包需要的工具
-RUN apk update && apk upgrade && apk add python3 make gcc g++
-# 解决sharp依赖的libvips包下载慢的问题
-COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
+RUN apk add python3 make g++
+# # 解决sharp依赖的libvips包下载慢的问题
+# COPY ../docker/back/npmlibs/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br /root/.npm/_libvips/libvips-8.12.2-linuxmusl-x64.tar.br
 
 # 复制源代码
 ## data
@@ -87,7 +87,7 @@ RUN echo VITE_BASE_URL=$vite_plugin_base_url >> /usr/src/tmw/ue_plugin/.env
 RUN cd /usr/src/tmw/ue_plugin && pnpm build
 
 # 生成运行镜像
-FROM node:18-alpine
+FROM node:16.15-alpine3.15 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories \
   && apk update && apk add bash tzdata \
   && cp -r -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
