--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "element-plus": "^2.2.8",
     "jsoneditor": "^9.9.0",
+    "pinia": "2.1.6",
     "tms-vue3-ui": "^0.0.87",
-    "vue": "3.2.47",
-    "vue-router": "4.1.2",
+    "vue": "3.3.4",
+    "vue-router": "4.2.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/jsoneditor": "^9.5.1",
-    "@types/node": "^18.7.13",
+    "@types/node": "^20.5.9",
     "@vitejs/plugin-vue": "4.0.0",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
@@ -27,8 +28,8 @@
     "stylelint": "^14.8.0",
     "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4",
+    "typescript": "5.2.2",
     "vite": "4.1.2",
-    "vue-tsc": "1.1.3"
+    "vue-tsc": "1.8.8"
   }
 }
