--- a/packages/tmw-kit/tsconfig.json
+++ b/packages/tmw-kit/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "noImplicitAny": false,
     "removeComments": true,
-    "preserveConstEnums": true,
+    "preserveConstEnums": false,
     "outDir": "./dist",
     "rootDir": "./",
     "declaration": true,
