--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -20,7 +20,7 @@
     "glob": "10.3.4",
     "lodash": "^4.17.21",
     "log4js": "^6.5.2",
-    "mongodb": "^6.0.0",
+    "mongodb": "5.6.0",
     "nanoid": "^4.0.2",
     "redis": "^4.6.8",
     "tms-koa": "^0.2.1",
