--- a/packages/tmw-kit/package.json
+++ b/packages/tmw-kit/package.json
@@ -24,7 +24,7 @@
     "jsonpath-plus": "^7.2.0",
     "lodash": "^4.17.21",
     "mongo-escape": "^2.0.6",
-    "mongodb": "^6.0.0",
+    "mongodb": "5.6.0",
     "nanoid": "4.0.2",
     "tmw-data": "workspace:*"
   },
