--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN npm config set registry https://registry.npmmirror.com
 # RUN npm config set sharp_libvips_binary_host https://npmmirror.com/mirrors/sharp-libvips
 
 # 安装基础包
-RUN npm install --location=global pnpm typescript
+RUN npm install --location=global pnpm typescript better-sqlite3
 
 # 安装sharp包需要的工具
 RUN apk update && apk upgrade && apk add python3 make gcc g++
