--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - tms-mongodb
 
   back:
-    build: ../back
+    build: ./back
     image: tms-mongodb/back:latest
     container_name: tms-mongodb-back
     # environment:
@@ -73,21 +73,10 @@ services:
     #    - TMW_PLUGIN_DOC_CREATE_ACCOUNT_CL=
     networks:
       - tms-mongodb
-    command:
-      [
-        'sh',
-        './wait-for.sh',
-        'mongodb:27017',
-        '-t',
-        '300',
-        '--',
-        'node',
-        'server',
-      ]
 
   ue_admin:
     build:
-      context: ../ue_admin
+      context: ./ue_admin
       args:
         vue_app_login_key_username: username
         vue_app_login_key_password: password
@@ -104,53 +93,6 @@ services:
     environment:
       # - NGINX_BACK_BASE_URL=http://back:3000
       - NGINX_WEB_BASE_URL=/admin
-      # # 定义连接基数区域，10m 可以储存 320000 个并发会话
-      # - NGINX_LIMIT_CONN_ZONE=10m
-      # # 是限制每个IP只能发起8000个并发连接
-      # - NGINX_LIMIT_CONN_CONNIP=8000
-      # # 指定当触发limit的时候日志打印级别
-      # - NGINX_LIMIT_CONN_LOG_LEVEL=error
-      # # 回复被禁用的连接请求时的状态码
-      - NGINX_LIMIT_CONN_STATUS=488
-      # # 达到阀值后开始限速(字节)
-      # - NGINX_LIMIT_RATE_AFTER=300m
-      # # 限制向客户端传输数据的速度(Byte/s)
-      # - NGINX_LIMIT_RATE=300k
-      # # 指定等待client发送一个包体的超时时间
-      # - NGINX_CLIENT_BODY_TIMEOUT=60s
-      # # 指定等待client发送一个包头的超时时间
-      # - NGINX_CLIENT_HEADER_TIMEOUT=60s
-      # # keep-alive连接超时时间
-      # - NGINX_KEEPALIVE_TIMEOUT=75s
-      # # 服务端向客户端传输数据的超时时间
-      # - NGINX_SEND_TIMEOUT=60s
-      # # 隐藏版本号
-      # - NGINX_SERVER_TOKENS=off
-    networks:
-      - tms-mongodb
-
-  ue_mongo:
-    build:
-      context: ../
-      dockerfile: ./ue_mongo/Dockerfile
-      args:
-        vue_app_login_key_username: username
-        vue_app_login_key_password: password
-        vue_app_login_key_pin: pin
-        vue_app_base_url: /mongo
-        vue_app_back_auth_base: /auth
-        vue_app_back_api_base: /api
-        vue_app_back_api_fs: /fs
-        vue_app_front_doceditor_add: ''
-        vue_app_front_doceditor_modify: ''
-        vue_app_front_batcheditor: ''
-        vue_app_storetoken_way: session
-        vue_app_pluginsub_names: ''
-    image: tms-mongodb/ue-mongo:latest
-    container_name: tms-mongodb-ue_mongo
-    environment:
-      # - NGINX_BACK_BASE_URL=http://back:3000
-      - NGINX_WEB_BASE_URL=/mongo
       # # 定义连接基数区域，10m 可以储存 320000 个并发会话
       # - NGINX_LIMIT_CONN_ZONE=10m
       # # 是限制每个IP只能发起8000个并发连接
