--- a/docker/ue_admin/nginx.conf.template
+++ b/docker/ue_admin/nginx.conf.template
@@ -55,7 +55,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  _;
         root   /usr/share/nginx/html;
 
         # 管理界面
