优化管理对象分类目录相关代码

--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -12,10 +12,10 @@
     "@antv/layout": "^0.3.5",
     "@antv/x6": "2.4.0",
     "@codemirror/view": "^6.11.1",
-    "@element-plus/icons-vue": "^2.0.6",
+    "@element-plus/icons-vue": "2.3.1",
     "add": "^2.0.6",
     "debug": "^4.3.4",
-    "element-plus": "^2.2.8",
+    "element-plus": "^2.5.0",
     "elkjs": "^0.8.2",
     "gitart-vue-dialog": "^2.4.0",
     "handlebars": "^4.7.7",
