--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -13,6 +13,7 @@
     "element-plus": "2.5.0",
     "jsoneditor": "^9.9.0",
     "pinia": "2.1.6",
+    "pinyin-pro": "^3.16.4",
     "tms-vue3-ui": "^0.0.87",
     "vue": "3.3.4",
     "vue-router": "4.2.4",
